--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,9 +119,9 @@ nav {
     z-index:99;
 }
 .fixed {
-	position: fixed; 
-	top: 0; 
-	min-height: 50px; 
+	position: fixed;
+	top: 0;
+	min-height: 50px;
 	z-index: 99;
 }
 
@@ -152,9 +152,9 @@ border-color: #3D3D3D;
     line-height: 16px;
     padding: 15px 0;
     position: absolute;
-    text-align: center;  
+    text-align: center;
     width: 100%;
-    
+
 	-webkit-transition: all 0.3s ease 0s;
 	-moz-transition: all 0.3s ease 0s;
 	-ms-transition: all 0.3s ease 0s;
@@ -164,7 +164,7 @@ border-color: #3D3D3D;
 .team-member:hover > h3 {
     background: #000;
     bottom: -55px;
-    color: #FFFFFF;	
+    color: #FFFFFF;
 	-webkit-transition: all 0.3s ease 0s;
 	-moz-transition: all 0.3s ease 0s;
 	-ms-transition: all 0.3s ease 0s;
@@ -183,7 +183,7 @@ border-color: #3D3D3D;
     margin: 30px 0px;
     list-style: none;
     text-align: center;
-  
+
     -webkit-transition: all 0.2s ease;
        -moz-transition: all 0.2s ease;
          -o-transition: all 0.2s ease;
@@ -273,14 +273,12 @@ font-size: 30px;
     width: 25%;
     clear: none;
 }
-#footer-copyright {
+.footer-copyright {
     background-color:#000;
     color:#fff;
     text-align:right;
-    height:90px;
     float:right;
-    position: absolute;
-    bottom: 0;
+    margin-right: -20px;
 }
 .clear {
     clear: both;
